RESOLVED FIXED202498
[iOS] When hit testing for a context menu interaction, do not consider whether the element is contenteditable
https://bugs.webkit.org/show_bug.cgi?id=202498
Summary [iOS] When hit testing for a context menu interaction, do not consider whethe...
Andy Estes
Reported 2019-10-02 15:43:31 PDT
[iOS] When hit testing for a context menu interaction, do not consider whether the element is contenteditable
Attachments
Patch (12.74 KB, patch)
2019-10-02 16:06 PDT, Andy Estes
no flags
Andy Estes
Comment 1 2019-10-02 16:06:49 PDT
Tim Horton
Comment 2 2019-10-02 16:15:27 PDT
Comment on attachment 380068 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=380068&action=review > Source/WebCore/page/ios/FrameIOS.mm:271 > +#if !USE(UIKIT_EDITING) Wut
Andy Estes
Comment 3 2019-10-02 16:18:34 PDT
(In reply to Tim Horton from comment #2) > Comment on attachment 380068 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=380068&action=review > > > Source/WebCore/page/ios/FrameIOS.mm:271 > > +#if !USE(UIKIT_EDITING) > > Wut #if PLATFORM(IOS_FAMILY) #define USE_UIKIT_EDITING 1 ... Yeah, surely we don't need this USE() anymore.
Andy Estes
Comment 4 2019-10-02 21:11:14 PDT
Radar WebKit Bug Importer
Comment 5 2019-10-02 21:11:27 PDT Comment hidden (obsolete)
Radar WebKit Bug Importer
Comment 6 2019-10-02 21:11:28 PDT Comment hidden (obsolete)
WebKit Commit Bot
Comment 7 2019-10-02 21:54:00 PDT
Comment on attachment 380068 [details] Patch Clearing flags on attachment: 380068 Committed r250642: <https://trac.webkit.org/changeset/250642>
WebKit Commit Bot
Comment 8 2019-10-02 21:54:02 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.